# SVG-Converter

./: CMakeLists.txt  LICENSE.txt  README.md  about.md  changelog.md  mod.json
.github/: actions.yml
.github/workflows/: build.yml
include/: errors.hpp  popups.hpp  svg.hpp
src/: main.cpp
src/ui/: popups.cpp
src/utils/: parser.cpp  renderer.cpp
